--- a/public/styles.css
+++ b/public/styles.css
@@ -513,59 +513,72 @@ button.selected~#photoCircle2 {
 
 @media only screen and (max-width: 600px) {
     body {
-        font-size: 16px;
+        font-size: 15px;
     }
 
     header {
-        height: 60px; /* Adjust header height for small screens */
+        height: 60px;
+        /* Adjust header height for small screens */
     }
 
     h1 {
-        font-size: 30px; /* Adjust h1 font size for small screens */
+        font-size: 25px;
+        ;
+        /* Adjust h1 font size for small screens */
     }
 
     button {
-        width: 120px; /* Adjust button width for small screens */
-        height: 80px; /* Adjust button height for small screens */
-        font-size: 14px; /* Adjust button font size for small screens */
+        width: 100px;
+        /* Adjust button width for small screens */
+        height: 80px;
+        /* Adjust button height for small screens */
+        font-size: 13px;
+        /* Adjust button font size for small screens */
     }
 
     #photoCircle,
     #photoCircle2 {
-        width: 100px; /* Adjust photo circle width for small screens */
-        height: 100px; /* Adjust photo circle height for small screens */
+        width: 100px;
+        /* Adjust photo circle width for small screens */
+        height: 100px;
+        /* Adjust photo circle height for small screens */
         position: fixed;
     }
 
     #photoCircle {
-        top: 10px;
+        top: 15px;
         left: 10px;
     }
 
     #photoCircle2 {
-        top: 10px;
+        top: 15px;
         right: 10px;
     }
 
     #photoCircle img,
     #photoCircle2 img {
-        width: 100%; /* Ensure the photo inside the circle takes up the full width */
+        width: 100%;
+        /* Ensure the photo inside the circle takes up the full width */
         height: 100%;
         object-fit: cover;
-        border-radius: 50%; /* Ensure the photo is circular */
+        border-radius: 50%;
+        /* Ensure the photo is circular */
     }
 
     .letter-image {
-        width: 80px; /* Adjust envelope width for small screens */
-        height: 80px; /* Adjust envelope height for small screens */
+        width: 50px;
+        /* Adjust envelope width for small screens */
+        height: 50px;
+        /* Adjust envelope height for small screens */
         position: fixed;
-        bottom: 10px;
+        bottom: 30px;
         left: 50%;
         transform: translateX(-50%);
     }
 
     .letter-image:hover .animated-mail {
-        transform: translateY(20px); /* Adjust envelope animation translation for small screens */
+        transform: translateY(20px);
+        /* Adjust envelope animation translation for small screens */
     }
 
     .letter-image:hover .animated-mail .top-fold {
@@ -575,19 +588,23 @@ button.selected~#photoCircle2 {
     }
 
     .letter-image:hover .animated-mail .letter {
-        height: 80px; /* Adjust letter height for small screens */
+        height: 50px;
+        /* Adjust letter height for small screens */
     }
 
     .shadow {
-        width: 80px; /* Adjust shadow width for small screens */
+        width: 30px;
+        /* Adjust shadow width for small screens */
     }
 
     .envelope-title {
-        font-size: 12px; /* Adjust envelope title font size for small screens */
+        font-size: 12px;
+        /* Adjust envelope title font size for small screens */
     }
 
     .phone-number {
-        font-size: 12px; /* Adjust phone number font size for small screens */
+        font-size: 12px;
+        /* Adjust phone number font size for small screens */
         position: fixed;
         bottom: 40px;
         left: 50%;
