--- a/public/styles.css
+++ b/public/styles.css
@@ -555,7 +555,7 @@ button.selected~#photoCircle2 {
 
     #photoCircle2 {
         bottom: 60px; /* Adjust top position to avoid overlapping header */
-        left: 30px;
+        right: 1px;
     }
 
     
