--- a/public/styles.css
+++ b/public/styles.css
@@ -564,7 +564,7 @@ button.selected~#photoCircle2 {
         /* Ensure the photo inside the circle takes up the full width */
         height: 100%;
         object-fit: cover;
-        border-radius: 49%;
+        border-radius: 49.5%;
         /* Ensure the photo is circular */
     }
 
@@ -611,7 +611,7 @@ button.selected~#photoCircle2 {
 
     .envelope-title {
         font-size: 12px;
-        position: fixed;
+        position: absolute;
         bottom: 10px;
         left: 50%;
         transform: translateX(-50%);
@@ -621,8 +621,8 @@ button.selected~#photoCircle2 {
     .phone-number {
         font-size: 12px;
         /* Adjust phone number font size for small screens */
-        position: fixed;
-        bottom: 30px;
+        position: absolute;
+        bottom: 40px;
         left: 50%;
         transform: translateX(-50%);
     }
