--- a/public/styles.css
+++ b/public/styles.css
@@ -578,10 +578,8 @@ button.selected~#photoCircle2 {
     }
 
     .letter-image {
-        width: 30px;
-        /* Adjust envelope width for small screens */
-        height: 20px;
-        /* Adjust envelope height for small screens */
+        width: 30px; /* Adjust envelope width for small screens */
+        height: 20px; /* Adjust envelope height for small screens */
         position: absolute;
         bottom: 20px;
         left: 50%;
