--- a/public/styles.css
+++ b/public/styles.css
@@ -604,7 +604,7 @@ button.selected~#photoCircle2 {
 
     .shadow {
         width: 80px;
-        bottom: 80px;
+        bottom: 10px;
         /* Adjust shadow width for small screens */
     }
 
@@ -612,7 +612,7 @@ button.selected~#photoCircle2 {
         font-size: 12px;
         position: absolute;
         bottom: 3px;
-        left: 50%;
+        left: 80px;
         transform: translateX(-50%);
         z-index: 1; /* Ensure the envelope title is below the photo circles */
     }
@@ -622,7 +622,7 @@ button.selected~#photoCircle2 {
         /* Adjust phone number font size for small screens */
         position: absolute;
         bottom: 30px;
-        left: 100%;
+        left: 80px;
         transform: translateX(-50%);
     }
 }
