--- a/public/styles.css
+++ b/public/styles.css
@@ -605,6 +605,7 @@ button.selected~#photoCircle2 {
     .shadow {
         width: 80px;
         bottom: 90px;
+        position:absolute;
         /* Adjust shadow width for small screens */
     }
 
@@ -612,7 +613,7 @@ button.selected~#photoCircle2 {
         font-size: 12px;
         position: absolute;
         bottom: 3px;
-        left: 90px;
+        left: 95px;
         transform: translateX(-50%);
         z-index: 1; /* Ensure the envelope title is below the photo circles */
     }
@@ -622,7 +623,7 @@ button.selected~#photoCircle2 {
         /* Adjust phone number font size for small screens */
         position: absolute;
         bottom: 30px;
-        left: 90px;
+        left: 95px;
         transform: translateX(-50%);
     }
 }
