--- a/public/styles.css
+++ b/public/styles.css
@@ -294,8 +294,8 @@ button.selected~#photoCircle2 {
     height: 50%;
     width: 100%;
     position: fixed;
-    bottom: 50%;
-    border-radius: 0%;
+    bottom: 455px;
+    border-radius: 1%;
     animation: snowfall 9s linear forwards infinite;
 }
 
