--- a/public/styles.css
+++ b/public/styles.css
@@ -134,10 +134,13 @@ section {
 /* Button Styles */
 button {
     width: 250px;
-    height: 120px;
+    height: 100px;
     font-size: 18px;
-    color: #002747;
-    border-radius: 45px;
+    font-family: 'CHERL___';
+    font-weight: 550;
+    color: #011b30;
+    border-radius: 40px;
+    background-color: #e4e9f1;
     border: 4px solid var(--button-border-color);
     margin-bottom: 12px;
     overflow: hidden;
@@ -188,8 +191,6 @@ button:focus>.heartImage {
     top: 80%;
     left: 20%;
     transform: translate(-50%, -50%) scale(0);
-    background: #c499ff;
-    border-radius: 50%;
     overflow: hidden;
     opacity: 0;
     z-index: 1;
@@ -210,10 +211,28 @@ button:focus~#photoCircle {
     opacity: 1;
 }
 
-/* Selected Heart Text Styles */
-button.selected~#photoCircle {
-    display: 1;
+/*photo 2 */
+
+#photoCircle2 {
+    position: fixed;
+    top: 79%;
+    right: 5%;
+    transform: translate(-50%, -50%) scale(0);
+    overflow: hidden;
+    opacity: 0;
+    z-index: 1;
+    width: 300px;
+    height: 297px;
+    transition: transform 5s, opacity 1s;
+    animation: appearPhoto 1.5s ease-in-out forwards;
 }
+
+#photoCircle2 img {
+    width: 60%;
+    height: 99%;
+    object-fit: cover;
+}
+
 
 /* Decorative Hearts Styles */
 .hearts {
@@ -222,30 +241,6 @@ button.selected~#photoCircle {
     left: 48%;
     transform: translate(-50%, -50%);
     z-index: 1;
-}
-
-/*photo 2 */
-
-#photoCircle2 {
-        position: fixed;
-        top: 79%;
-        right: 5%;
-        transform: translate(-50%, -50%) scale(0);
-        background: #c499ff;
-        border-radius: 50%;
-        overflow: hidden;
-        opacity: 0;
-        z-index: 1;
-        width: 300px;
-        height: 300px;
-        transition: transform 5s, opacity 1s;
-        animation: appearPhoto 1.5s ease-in-out forwards;
-}
-
-#photoCircle2 img {
-    width: 60%;
-    height: 100%;
-    object-fit: cover;
 }
 
 /* Adjust the animation duration and easing function as needed */
@@ -262,29 +257,11 @@ button.selected~#photoCircle {
 }
 
 
-
-button.selected~#photoCircle2 {
-    display: 1;
-}
-
-
 .hearts img {
     max-width: 20%;
     height: auto;
     display: block;
 }
-
-
-.container {
-    height: 650px;
-    width: 650px;
-    border-radius: 0%;
-    position: fixed;
-    bottom: 5px;
-    left: 10px;
-    z-index: 800;
-}
-
 
 
 .snowfall {
@@ -294,7 +271,7 @@ button.selected~#photoCircle2 {
     height: 50%;
     width: 100%;
     position: fixed;
-    bottom: 48%;
+    bottom: 55%;
     border-radius: 1%;
     animation: snowfall 9s linear forwards infinite;
 }
@@ -327,12 +304,10 @@ button.selected~#photoCircle2 {
 
 .highlight-gradient {
     
-            border-radius: 30px;
-            padding: 45px 20px;
-            background-image: linear-gradient(90deg, rgba(246, 224, 255, 0) 0%, rgba(246, 224, 255, 1) 25%, rgba(254, 185, 251, 1) 50%, rgba(148, 237, 255, 1) 75%, rgba(148, 237, 255, 0) 100%);
+            background-image: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(246, 224, 255, 1) 25%, rgba(254, 185, 251, 1) 50%, rgba(148, 237, 255, 1) 75%, rgb(255, 255, 255) 100%);
+            border-radius: 10px;
+            padding: 10px 10px;
         }
-
-
 
 
 /* Envelop */
@@ -416,16 +391,16 @@ button.selected~#photoCircle2 {
             background: repeating-linear-gradient(-45deg, #cb5a5e, #cb5a5e 8px, transparent 8px, transparent 18px);
         }
 
-                .letter-title {
-                    margin-top: 10px;
-                    margin-left: 10px;
-                    height: 10px;
-                    width: 100%;
-                    /* Adjust the width as needed */
-                    white-space: nowrap;
-                    /* Prevent text from wrapping */
-                    background: #cb5a5e;
-                }
+        .letter-title {
+            margin-top: 10px;
+            margin-left: 10px;
+            height: 10px;
+            width: 100%;
+            /* Adjust the width as needed */
+            white-space: nowrap;
+            /* Prevent text from wrapping */
+            background: #cb5a5e;
+        }
 
         .letter-context {
             margin-top: 10px;
@@ -463,7 +438,7 @@ button.selected~#photoCircle2 {
     position: relative;
     font-style: italic;
     bottom: 2px;
-    left: 70%;
+    left: 50%;
     transform: translateX(-50%);
     color: rgb(0, 0, 0);
     font-size: 20px;
@@ -473,7 +448,7 @@ button.selected~#photoCircle2 {
 .phone-number {
     position: absolute;
     bottom: 100px;
-    left: 55%;
+    left: 53%;
     transform: translateX(-50%);
     color: rgb(0, 0, 0);
     font-size: 20px;
@@ -538,33 +513,37 @@ button.selected~#photoCircle2 {
         /* Adjust button font size for small screens */
     }
 
-    #photoCircle,
-    #photoCircle2 {
+    #photoCircle
+    {
         width: 100px;
         /* Adjust photo circle width for small screens */
         height: 100px;
         /* Adjust photo circle height for small screens */
         position: absolute;
-        z-index: 2; /* Ensure photo circles are above other elements */
-    }
-
-    #photoCircle {
-        bottom: 60px; /* Adjust top position to avoid overlapping header */
+        z-index: 1; /* Ensure photo circles are above other elements */
+        bottom: 60px;
+        /* Adjust top position to avoid overlapping header */
         left: 60px;
     }
 
-    #photoCircle2 {
-        bottom: 60px; /* Adjust top position to avoid overlapping header */
-        right: -20px;
-    }
-
+        #photoCircle2 {
+            width: 100px;
+            /* Adjust photo circle width for small screens */
+            height: 103px;
+            /* Adjust photo circle height for small screens */
+            position: absolute;
+            z-index: 1;
+            /* Ensure photo circles are above other elements */
+            bottom: 60px;
+            /* Adjust top position to avoid overlapping header */
+            right: -35px;
+        }
     
     #photoCircle2 img {
-        width: 100%;
+        width: 97%;
         /* Ensure the photo inside the circle takes up the full width */
-        height: 100%;
+        height: 99%;
         object-fit: cover;
-        border-radius: 49.5%;
         /* Ensure the photo is circular */
     }
 
@@ -573,58 +552,180 @@ button.selected~#photoCircle2 {
         /* Ensure the photo inside the circle takes up the full width */
         height: 100%;
         object-fit: cover;
-        border-radius: 50%;
         /* Ensure the photo is circular */
     }
 
-    .letter-image {
-        width: 30px; /* Adjust envelope width for small screens */
-        height: 20px; /* Adjust envelope height for small screens */
-        position: absolute;
-        bottom: 20px;
-        left: 30%;
-        transform: translateX(-50%);
-    }
+    /* Envelop Media Query*/
 
-    .letter-image:hover .animated-mail {
-        transform: translateY(10px);
-        /* Adjust envelope animation translation for small screens */
-    }
+        .letter-image {
+            position: fixed;
+            bottom: 20%;
+            /* Adjust the distance from the bottom */
+            left: 37%;
+            transform: translateX(-50%);
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+        }
+    
+        .animated-mail {
+            position: absolute;
+            height: 50px;
+            width: 10px;
+            transition: 0.5s;
+    
+            .body {
+                position: absolute;
+                bottom: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 0 0 50px 100px;
+                border-color: transparent transparent #e95f55 transparent;
+                z-index: 2;
+            }
+    
+            .top-fold {
+                position: absolute;
+                top: 25px;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 25px 50px 0 50px;
+                transform-origin: 50% 0%;
+                transition: transform 0.5s, z-index 0.2s;
+                border-color: #cf4a43 transparent transparent transparent;
+                z-index: 2;
+            }
+    
+            .back-fold {
+                position: absolute;
+                bottom: 0;
+                width: 100px;
+                height: 50px;
+                background: #cf4a43;
+                z-index: 0;
+            }
+    
+            .left-fold {
+                position: absolute;
+                bottom: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 25px 0 25px 50px;
+                border-color: transparent transparent transparent #e15349;
+                z-index: 2;
+            }
+    
+            .letter {
+                left: 10px;
+                bottom: 0px;
+                position: absolute;
+                width: 80px;
+                height: 30px;
+                background: white;
+                z-index: 1;
+                overflow: hidden;
+                transition: 0.5s 0.5s;
+    
+                .letter-border {
+                    height: 10px;
+                    width: 100%;
+                    background: repeating-linear-gradient(-45deg, #cb5a5e, #cb5a5e 8px, transparent 8px, transparent 18px);
+                }
+    
+                .letter-title {
+                    margin-top: 10px;
+                    margin-left: 10px;
+                    height: 10px;
+                    width: 100%;
+                    /* Adjust the width as needed */
+                    white-space: nowrap;
+                    /* Prevent text from wrapping */
+                    background: #cb5a5e;
+                }
+    
+                .letter-context {
+                    margin-top: 10px;
+                    margin-left: 5px;
+                    height: 10px;
+                    width: 20%;
+                    background: #cb5a5e;
+                }
+    
+                .letter-stamp {
+                    margin-top: 30px;
+                    margin-left: 120px;
+                    border-radius: 100%;
+                    height: 30px;
+                    width: 30px;
+                    background: #cb5a5e;
+                    opacity: 0.5;
+                }
+            }
+        }
+    
+        .shadow {
+            position: absolute;
+            top: 75px;
+            left: 100%;
+            width: 150px;
+            height: 20px;
+            transition: 0.4s;
+            transform: translateX(-50%);
+            border-radius: 100%;
+            background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
+        }
+    
+        .envelope-title {
+            position: relative;
+            font-style: italic;
+            bottom: 2px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: rgb(0, 0, 0);
+            font-size: 14px;
+            opacity: 1;
+        }
+    
+        .phone-number {
+            position: absolute;
+            bottom: 70px;
+            left: 53%;
+            transform: translateX(-50%);
+            color: rgb(0, 0, 0);
+            font-size: 14px;
+            opacity: 1;
+            cursor: pointer;
+            transition: opacity 1s;
+        }
+    
+        .letter-image:hover .animated-mail {
+            transform: translateY(25px);
+        }
+    
+        .letter-image:hover .animated-mail .top-fold {
+            transition: transform 0.5s, z-index 0.2s;
+            transform: rotateX(180deg);
+            z-index: 0;
+        }
+    
+        .letter-image:hover .animated-mail .letter {
+            height: 110px;
+        }
+    
+        .letter-image:hover .shadow {
+            width: 50px;
+        }
+    
+        .letter-image:hover .envelope-title {
+            opacity: 0;
+        }
+    
+        .letter-image:hover .phone-number {
+            opacity: 1;
+        }
 
-    .letter-image:hover .animated-mail .top-fold {
-        transition: transform 0.5s, z-index 0.2s;
-        transform: rotateX(180deg);
-        z-index: 0;
-    }
-
-    .letter-image:hover .animated-mail .letter {
-        height: 15px;
-        /* Adjust letter height for small screens */
-    }
-
-    .shadow {
-        width: 80px;
-        bottom: 90px;
-        left:97px;
-        position:absolute;
-        /* Adjust shadow width for small screens */
-    }
-
-    .envelope-title {
-        font-size: 12px;
-        position: absolute;
-        bottom: 3px;
-        left: 97px;
-        transform: translateX(-50%);
-        z-index: 1; /* Ensure the envelope title is below the photo circles */
-    }
-
-    .phone-number {
-        font-size: 12px;
-        /* Adjust phone number font size for small screens */
-        position: absolute;
-        bottom: 30px;
-        left: 97px;
-        transform: translateX(-50%);
-    }
 }
+
